# salsa

./: project.config
CommandClient/: .gitignore  .nfs010e04fe00000042  Makefile  Makefile.in  Taco.sh  configure  configure.in  taco.C
InteractiveClient/: .gitignore  ActivateGroup.java  AttributeManager.java  AuthenticationRequest.java  CcsServer.java  CcsThread.java  ChangeLog  ChooseSimulation.java  ChooseSimulationFrame.java  CodePanel.java  ColorBarPanel.java  ColorMapDisplay.java  ColoringManager.java  CommandPane.java  CommandParser.java  CommandPrompt.java  Config.java  ConfigPanel.java  ConnectFrame.java  Connection.java  DelimitedStringEnumeration.java  DuplicateView.java  Family.java  Group.java  GroupManager.java  GroupPiece.java  GroupQuery.java  HighLevelPython.java  InputPanel.java  InteractiveClient.java  InteractiveWindow.java  JSliderOldValue.java  ListSimulations.java  LocalParticle.java  MainView.java  Makefile  Manager.java  Manifest  ManualPanel.java  MenuBar.java  (+42 more)
InteractiveClient/charm/ccs/: CcsLabel.java  CcsProgress.java  CcsServer.java  CcsThread.java  PythonAbstract.java  PythonExecute.java  PythonFinished.java  PythonIterator.java  PythonPrint.java  README.txt
ResolutionServer/: .gitignore  CHANGES  HighLevelPython.cpp  Makefile  Makefile.MacOSX  Makefile.in  MetaInformationHandler.cpp  ParticleStatistics.h  PixelDrawing.cpp  PyObjectMarshal.h  PythonCCS.trq.patch  PythonInstance.h  README  Reductions.cpp  Reductions.h  ResolutionServer.ci  ResolutionServer.cpp  ResolutionServer.doxygen  ResolutionServer.h  ResolutionServerPython.cpp  Run_Salsa.sh  Salsa.sh  Salsa_remote.sh  Worker.cpp  config.h.in  configure  configure.ac  epgpu.cpp  epgpu.h  export_Vector3D.h  nodelist  particlelib.cpp  particlelib.h  pup_network.h  run99.std  run_server.sh  samples.py  simlist  sqlcl.py  tipsy.py  (+1 more)
ResolutionServer/lib/: checkics.py
ResolutionServer/lib/queso/: README.txt  __init__.py  export.py  glob.py  profile.py  quesoConfig.py  vectormath.py
ResolutionServer/lib/queso/exports/: __init__.py  writeascii.py  writegalascii.py
ResolutionServer/lib/queso/globals/: __init__.py  angmom.py  epsilondist.py  findcenter.py  galcoord.py  getgroupradius.py  halfmassradius.py  metals.py  mominertia.py  virialgroup.py
ResolutionServer/lib/queso/profiles/: metalprof.py  sfrprofile.py
ResolutionServer/lib/tipsy/: __init__.py  config.py  elliptical.py  grav.py  load_meanmwt.py  spline.py  start.py  tipsyf.py  tprofile.py  trot_cur.py  tshortfns.py
ResolutionServer/ogl/: glsl.cpp  glsl.h
ResolutionServer/tipsy/: config.py  elliptical.py  grav.py  meanmwt.py  spline.py  star_lum.py  tipsy.py  tipsyf.py  tprofile.py  trot_cur.py  tshortfns.py
